--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ code {
   border: 0;
   border-radius: 4px;
   box-shadow: none;
+  margin-bottom: 6px;
   padding: 1rem;
   height: 2.25em;
   font-size: 24px;
