--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ code {
   border-radius: 4px;
   box-shadow: none;
   margin-bottom: 6px;
+  margin-top: 6px;
   padding: 1rem;
   height: 2.25em;
   font-size: 24px;
