--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+h1 {
+  margin-left: 40px; 
+}
+
 .app {
   background: #209cee;
   padding: 30px;
@@ -51,8 +55,12 @@ code {
 }
 
 .trash{
-  align: left;
   content: url(./garbage-can.png);
+  display: none;
   height: 20px;
   width: 20px;
+}
+
+.todo:hover + .trash {
+  display: block;
 }
